--- a/index.html
+++ b/index.html
@@ -85,13 +85,22 @@
                                             Vale
                                         </h2>
                                         <h3>Boda Católica</h6>
-                                            <br>
-                                            <h6>06 de Setiembre — Felsővízivárosi Szent Anna templom Budapest, Hungrìa
-                                            </h6>
-                                            <br>
-                                            <h3>Boda Civil</h6>
+                                            <p style="font-family: 'Didact Gothic', sans-serif;
+                                            font-size: 16px;
+                                            line-height: 1.75em;
+                                            margin: 0 0 20px;
+                                            color: #ffffff;
+                                            font-weight: 400;">06 de Setiembre — Budapest, Hungrìa
+                                                </h6>
                                                 <br>
-                                                <h6>25 de Octubre — Tierra Nueva, San Pablo de Heredia.</h6>
+                                            <h3>Boda Civil</h6>
+                                                <p style="font-family: 'Didact Gothic', sans-serif;
+                                                font-size: 16px;
+                                                line-height: 1.75em;
+                                                margin: 0 0 20px;
+                                                color: #ffffff;
+                                                font-weight: 400;">25 de Octubre — Tierra Nueva, San Pablo de Heredia.
+                                                    </h6>
                                     </div>
                                 </div>
                             </div>
@@ -103,7 +112,7 @@
 
     </header>
     <!-- Welcome section -->
-    <div id="welcome" class="welcome section-padding fondillo">
+    <div id="welcome" class="welcome section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -128,28 +137,23 @@
             </div>
         </div>
     </div>
-    <!-- Bride & Groom section 
-     
-    background-color: #faf8f7;
+    <!-- Bride & Groom section -->
 
-    "background-image: url(images3/cambio_portado.jpg);
-    -->
-
-    <div id="story" class="story section-padding fondillo eucalipto" data-scroll-index="2">
+    <div id="story" class="story section-padding" data-scroll-index="2" style="background-color: #faf8f7;">
         <div class="container">
-            <div class="row">
+            <div class="row" style="padding-top: 50px;">
                 <div class="col-md-12 text-center animate-box" data-animate-effect="fadeInUp">
                     <h6 class="section-subtitle">Vale & César</h6>
                     <h2 class="section-title">Un amor para la historia</h2>
                 </div>
             </div>
             <br><br>
-            <div class="row" style="padding-top: 50px;">
+            <div class="row">
                 <div class="col-md-12 animate-box" data-animate-effect="fadeInUp">
                     <div class="">
                         <div class="story left">
                             <figure><img src="images3/Foto_un_amor_para_la_historia.jpg" alt=""></figure>
-                            <div class="caption" style="background-image: url(assets/fondo.png);">
+                            <div class="caption">
 
                                 <p style="font-size: small;">Todo comenzó en nuestro primer día de trabajo. Ambos éramos
                                     nuevos, tratando de
@@ -191,7 +195,7 @@
     </div>
     <!-- Countdown section -->
     <div id="countdown" class="section-padding bg-img bg-fixed" data-overlay-dark="1"
-        style="background: url(images3/Foto_cuenta_regresiva.jpg); background-position: 50%;">
+        style="background: url(images3/Foto_cuenta_regresiva.jpg); background-position: 60%;">
         <div class="container">
             <div class="row">
                 <div class="section-head col-md-12">
@@ -210,6 +214,7 @@
             </div>
         </div>
     </div>
+    <br>
     <!-- Video section -->
     <div id="video" class="story-video section-padding bg-img bg-fixed" data-overlay-dark="2"
         style="background: url(images3/video.png); background-position: 50%;">
@@ -239,14 +244,21 @@
     </div>
 
 
-    <div id="gallery" class="section-padding eucalipto" data-scroll-index="5">
+    <div id="gallery" class="section-padding bg-cream" data-scroll-index="5">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h6 class="section-subtitle">Galería</h6>
                     <h2 class="section-title">Sesión de compromiso</h2>
-                    <a href="https://japphotocr.pixieset.com/valeandcesarprewedding/" target="_blank">
-                        <h3>Haz click aquí para ver nuestra sesión de compromiso!</h3>
+                    <a href="https://japphotocr.pixieset.com/valeandcesarprewedding/" target="_blank" style="font-family: 'Didact Gothic', sans-serif;
+                    font-size: 20px;
+                    line-height: 1.75em;
+                    margin: 0 0 20px;
+                    color: #000000;
+                    font-weight: 400;
+                    font-style: italic;">
+                        <p>Haz click aquí para ver nuestra sesión de compromiso!</h3>
+
                     </a>
                 </div>
             </div>
@@ -264,7 +276,8 @@
             <div class="row">
                 <div class="section-head col-md-12">
                     <h2>¡Esperamos verte!</h2>
-                    <h1>25.09.2025</h1>
+                    <h1>06.09.2025</h1>
+                    <h1>25.10.2025</h1>
                     <h1><i class="ti-heart"></i></h1>
                 </div>
             </div>
@@ -273,12 +286,10 @@
 
 
     <!-- When & Where section -->
-    <div id="whenwhere" class="when-where section-padding eucalipto2" data-scroll-index="6">
-
+    <div id="whenwhere" class="when-where section-padding" data-scroll-index="6">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center animate-box" data-animate-effect="fadeInUp">
-                    <br><br><br>
                     <h6 class="section-subtitle">Agenda la fecha</h6>
 
                     <h2 class="section-title">¿Cuando y Donde?</h2>
@@ -296,6 +307,7 @@
                         <div class="date">
                             <h3>25</h3>
                             <h6>Setiembre 2025</h6>
+
                         </div>
                         <div class="cont">
                             <div class="info">
@@ -310,19 +322,20 @@
                                             <br> Después de la ceremonia, acompañados a cenar en un barco por el
                                             Danubio.
                                         </p>
-                                    </div>
-                                </li>
 
+                                    </div>
+
+                                </li>
+                                <br>
+                                <a href="https://maps.app.goo.gl/kmTeaVqPppxHRFzN6" target="_blank"> <button
+                                        id="openOverlay" class="btn"><span class="ti-location-pin"></span>Google
+                                        Maps</button>
+                                </a>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <br><br>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3361.971081246095!2d19.038361100000003!3d47.5056549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4741dc1990094a4b%3A0x7c15e9f61b43202!2sFels%C5%91v%C3%ADziv%C3%A1rosi%20Szent%20Anna%20templom!5e1!3m2!1ses-419!2scr!4v1741019474601!5m2!1ses-419!2scr"
-                    width="100%" height="450" style="border:0; padding: 5%;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
             </div>
             <div class="row">
                 <div class="col-md-6 order2 valign animate-box" data-animate-effect="fadeInLeft">
@@ -344,7 +357,11 @@
                                         </p>
                                     </div>
                                 </li>
-
+                                <br>
+                                <a href="https://maps.app.goo.gl/KCegHEbEeEAVERRN9" target="_blank"> <button
+                                    id="openOverlay" class="btn"><span class="ti-location-pin"></span>Google
+                                    Maps</button>
+                            </a>
                             </ul>
                         </div>
                     </div>
@@ -356,14 +373,12 @@
                 </div>
 
             </div>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.056788837744!2d-84.0757192!3d10.012168100000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e56944fb16db%3A0x43aa59f755ddf62b!2sTierra%20Nueva%20Eventos!5e0!3m2!1sen!2scr!4v1741019611035!5m2!1sen!2scr"
-                width="100%" height="450" style="border:0; padding: 5%;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+            
         </div>
 
     </div>
+
+
 
     <!-- Dress Code section -->
     <div id="outfit" class="bride-groom clear section-padding dorado7" data-scroll-index="3">
@@ -401,12 +416,14 @@
     </div>
 
 
+    <br>
 
 
     <!-- Banner section -->
     <!-- RSVP Form section -->
-    <div id="rsvp" class="rsvp section-padding bg-img bg-fixed" data-scroll-index="7"
-        style="background-image: url(images3/fotos_hemos_reservado_para_ti.jpg); background-position: 70%;">
+    <div id="rsvp" class="rsvp section-padding bg-img bg-fixed"
+        data-background="images3/fotos_hemos_reservado_para_ti.jpg" data-scroll-index="7"
+        style="background-position: 70%;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 offset-md-3 bg-white p-60" style="text-align: center; opacity: 0.8;">
@@ -422,8 +439,6 @@
                         Civil en Costa Rica: 20 Setiembre 2025
                         <a href="https://forms.gle/iUAykiKBVJGp9w4f8"
                             style="color: #666; text-decoration: underline;">Link de confirmación</a>
-
-                    </p>
                 </div>
             </div>
         </div>
@@ -432,7 +447,7 @@
 
 
     <!-- Gift Registry section -->
-    <div id="gift" class="gift-registry fondillo" data-scroll-index="8">
+    <div id="gift" class="gift-registry" data-scroll-index="8">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -460,7 +475,6 @@
                             Número de cuenta BAC: 965011224<br>
                             Número de cuenta IBAN: CR76010200009650112248
                             <p><br>
-
                         </div>
                     </div>
                 </div>
@@ -468,7 +482,7 @@
         </div>
     </div>
 
-    <div id="gift" class="gift-registry fondillo eucalipto3" data-scroll-index="8" style="background-color: #ffffff;">
+    <div id="gift" class="gift-registry" data-scroll-index="8" style="background-color: #ffffff;">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
