--- a/index.html
+++ b/index.html
@@ -454,31 +454,20 @@
                     <h6 class="section-subtitle">Regalos</h6>
                     <div class="text">
                         <p><b>Queridos familiares y amigos:</b></p>
-                        <p>El mayor regalo que podemos recibir en este día tan especial es su presencia y su cariño. Les
-                            agradecemos profundamente por estar a nuestro lado y por creer en nosotros. Si desean
-                            contribuir con un detalle adicional, cualquier aportación económica será recibida con mucho
-                            agradecimiento.
-                        </p>
+                    <h6 class="text-center" style="font-family: Didact Gothic; font-size: large; color: black;">
+                        <br>
+                        Siempre lo más importante es tu compañía, si gustan darnos una muestra de cariño da click en el siguiente botón para ir a la zona de obsequios:
+
+                        <br><br>
+                        
+                    </h6>
+                    <div class="text-center">
+                        <input class="btn" value="Regalos" type="button" onclick="window.location.href='regalos.html'">
+                    </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <br>
-                    <div class="col-md-12 text-center">
-                        <div class="">
-                            <h6 class="section-subtitle">Depósito SINPE Móvil</h6>
-                            <p>8493-7845 a nombre de Valeria Martinez</p>
-                            <p>8310-0173 a nombre de Cesar Chaves</p><br>
-                            <h6 class="section-subtitle">Cuenta BAC Colones</h6>
-                            Cliente: VALERIA CRISTINA MARTINEZ RIVERA <br>
-                            Número de cuenta BAC: 965011224<br>
-                            Número de cuenta IBAN: CR76010200009650112248
-                            <p><br>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
 
