--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                     <li class="nav-item"><a class="nav-link" href="#rsvp" data-scroll-nav="7">Reserva</a></li>
                     <li class="nav-item"><a class="nav-link" href="#gift" data-scroll-nav="8">Regalos</a></li>
-                    
+
                 </ul>
             </div>
         </div>
@@ -319,7 +319,7 @@
                                     <div class="icon"> <span class="ti-location-pin"></span> </div>
                                     <div class="text">
                                         <p>Szent Anna Templom - Budapest, Hungrìa
-                                            <br> Después de la ceremonia, acompañados a cenar en un barco por el
+                                            <br> Después de la ceremonia, acompañanos a cenar en un barco por el
                                             Danubio.
                                         </p>
 
@@ -434,7 +434,7 @@
                     <br>
                     <p style="text-align: center;">Fecha máxima para confirmar la asistencia:
                     </p>
-                    <p>Catolica en Hungria: 30 Abril 2025
+                    <p>Católica en Hungria: 30 Abril 2025
                         <a href="https://forms.gle/x2BGRL2yuB1StEYC7"
                             style="color: #666; text-decoration: underline;">Link de confirmación</a>
                     </p>
@@ -459,11 +459,20 @@
                         <p><b>Queridos familiares y amigos:</b></p>
                         <h6 class="text-center" style="font-family: Didact Gothic; font-size: large; color: black;">
                             <br>
-                            Siempre lo más importante es tu compañía, si gustan darnos una muestra de cariño da click en
-                            el siguiente botón para ir a la zona de obsequios:
+                            Siempre lo más importante es tu compañía, si desean contribuir con un detalle adicional
+                            hemos habilitado la opción de realizar una transferencia bancaria:
+
+                            <h6 class="section-subtitle">Depósito SINPE Móvil</h6>
+                            <p>8493-7845 a nombre de Valeria Martinez</p>
+                            <p>8310-0173 a nombre de Cesar Chaves</p><br>
+                            <h6 class="section-subtitle">Cuenta BAC Colones</h6>
+                            Cliente: VALERIA CRISTINA MARTINEZ RIVERA <br>
+                            Número de cuenta BAC: 965011224<br>
+                            Número de cuenta IBAN: CR76010200009650112248
 
                             <br><br>
 
+                            <p>Si gustan darnos unamuestra de cariño, da click en el siguiente botón para ir a la zona de obsequios</p>
                         </h6>
                         <div class="text-center">
                             <input class="btn" value="Regalos" type="button"
@@ -482,7 +491,7 @@
                 <div class="col-md-12 text-center">
 
                     <h6 class="section-subtitle" style="font-size: larger;">Notas importantes</h6>
-                    <p>Queremos que disfruten y bailen sin parar en este día tan especial, por lo que hemos diseñado
+                    <p>Queremos que disfruten y bailen sin parar en este día tan especial. Hemos diseñado
                         esta celebración pensando exclusivamente en los adultos, por lo que no tendremos niños. <br>
 
                     <p>Tendremos transporte para 50 personas desde Cartago a Heredia ida y vuelta. La salida será
