--- a/itinerario.html
+++ b/itinerario.html
@@ -226,7 +226,7 @@
         <div class="activity">
             <img src="https://i.ibb.co/NnSc14QR/Imagen2.png" alt="Paseo por el Río Danubio">
             <div class="details">
-                <h2>Paseo por el Río Danubio</h2>
+                <h2>Paseo por la ciudad</h2>
                 <p class="date">4 de Septiembre 2025</p>
                 <p class="location">Río Danubio, Budapest</p>
             </div>
